tidy data image

--- a/Lesson1/slides/introtoR_part2_slides.html
+++ b/Lesson1/slides/introtoR_part2_slides.html
@@ -126,6 +126,10 @@ library(tidyverse)</pre>
 <pre >## filter(): dplyr, stats
 ## lag():    dplyr, stats</pre>
 
+</article></slide><slide class=''><hgroup><h2>Tidy Data</h2></hgroup><article  id="tidy-data">
+
+<img src='https://github.com/eringrand/RTutorials/blob/master/Lesson1/images/tidy-1.png?raw=true' title='fig:'/>
+
 </article></slide><slide class=''><hgroup><h2>Learn to think in Code</h2></hgroup><article  id="learn-to-think-in-code">
 
 <p>How to do you currently think about a task in excel or tableau? Learn how to translate and use that process in code.</p>
@@ -160,7 +164,7 @@ library(tidyverse)</pre>
 
 </article></slide><slide class=''><hgroup><h2>Filter</h2></hgroup><article  id="filter">
 
-<p>Task: filter the IA data to only include</p>
+<p>Task: filter the IA data to only include NY 8th grade students Math tests. This way you&#39;ll only looking at Regents test takers.</p>
 
 </article></slide><slide class=''><hgroup><h2>Select</h2></hgroup><article  id="select">
 
