change theme on ackn. page

--- a/index.html
+++ b/index.html
@@ -341,8 +341,10 @@ div.tocify {
 <li><a href="Lesson1/subsetting.html">Subsetting</a></li>
 </ul>
 <!-- ### Assignments -->
-<!-- - [Using the Tidyverse](Lesson1/Assignment/assignment_2.R){:target="_blank"} -->
 </div>
+</div>
+<div id="section" class="section level2">
+<h2><!-- - [Using the Tidyverse](Lesson1/Assignment/assignment_2.R){:target="_blank"} --></h2>
 </div>
 <div id="lesson-2" class="section level2">
 <h2>Lesson 2</h2>
@@ -371,7 +373,7 @@ div.tocify {
 <div id="other" class="section level2">
 <h2>Other</h2>
 <ul>
-<li><a href="hadley_notes.nb.html">Notes from a talk at Columbia by Hadley Wickham: Data Science in R</a>{:target=“_blank“}</li>
+<li><a href="hadley_notes.nb.html">Notes from a talk at Columbia by Hadley Wickham: Data Science in R</a></li>
 </ul>
 <hr />
 </div>
