lots of edits to basic worksheet

--- a/index.html
+++ b/index.html
@@ -289,9 +289,6 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="acknowledgements.html">Acknowledgements</a>
-</li>
-<li>
   <a href="contact.html">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -316,9 +313,8 @@ div.tocify {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="welcome-to-my-r-tutorials-page." class="section level2">
-<h2>Welcome to My R Tutorials Page.</h2>
+<div id="welcome-to-my-r-tutorials-page" class="section level2">
+<h2>Welcome to My R Tutorials Page</h2>
 <p>I’m helping my coworkers expand their use and knowledge of R. This is will be the main resource for putting my materials until I find a different place.</p>
 </div>
 <div id="lesson-1" class="section level2">
