--- a/index.html
+++ b/index.html
@@ -321,12 +321,7 @@ div.tocify {
 <h2>Lesson 1</h2>
 <div id="slides" class="section level3">
 <h3>Slides</h3>
-<ul>
-<li><a href="Lesson1/slides/intro_to_Rstudio_slides.html">Rstudio Basics</a></li>
-<li><a href="Lesson1/slides/introtoR_basics_slides.html">Basics of R Coding</a></li>
-<li><a href="Lesson1/slides/introtoR_pipe_slides.html">The Pipe</a></li>
-<li><a href="Lesson1/slides/introtoR_part2_slides.html">Transforming Data</a></li>
-</ul>
+Slides are being revamped and will be avilable soon.
 </div>
 <div id="workbooks" class="section level3">
 <h3>Workbooks</h3>
